args count check

--- a/src/azmi-commandline/azmi-commandline.csproj
+++ b/src/azmi-commandline/azmi-commandline.csproj
@@ -5,6 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>azmi_commandline</RootNamespace>
     <AssemblyName>azmi</AssemblyName>
+    <ApplicationIcon />
+    <Win32Resource />
   </PropertyGroup>
 
   <ItemGroup>
