--- a/src/azmi-main/azmi-main.csproj
+++ b/src/azmi-main/azmi-main.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.x</TargetFramework>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
     <RootNamespace>azmi_main</RootNamespace>
     <OutputType>Library</OutputType>
   </PropertyGroup>
