--- a/test/azmi-main-tests/azmi-main-tests.csproj
+++ b/test/azmi-main-tests/azmi-main-tests.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\azmi-main\azmi-main.csproj" />
+    <ProjectReference Include="..\..\src\azmi-main\azmi-main.csproj" />
   </ItemGroup>
 
 </Project>
