--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -9,5 +9,5 @@ jobs:
     - uses: actions/first-interaction@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: 'Message that will be displayed on users'' first issue.'
-        pr-message: 'Message that will be displayed on users'' first Pull Request.'
+        issue-message: 'Thank you for your first issue in this repo.'
+        pr-message: 'Thank you for your first Pull Request! We are looking forward to next ones!'
