--- a/src/azmi-commandline/azmi-commandline.csproj
+++ b/src/azmi-commandline/azmi-commandline.csproj
@@ -7,11 +7,20 @@
     <AssemblyName>azmi</AssemblyName>
     <ApplicationIcon />
     <Win32Resource />
+    <Version>0.2.0</Version>
+    <Company>Microsoft</Company>
+    <Description>Command-line utility azmi stands for Azure Managed Identity.
+It is helping admins simplify common operations (reading / writing) on standard Azure resources.
+It is utilizing Azure AD authentication via user assigned managed identity.</Description>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.CommandLine.Experimental" Version="0.3.0-alpha.19577.1" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\azmi-main\azmi-main.csproj" />
