--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,7 @@
+# Denote all files that are truly binary and should not be modified.
+*.png binary
+*.jpg binary
+
 # Handle line endings automatically for files detected as text
 # and leave all files detected as binary untouched.
 * text=auto
