--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -20,6 +20,7 @@ jobs:
     - name: Install dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build --configuration Release --no-restore
+      run: dotnet build ./src/azmi-commandline/azmi-commandline.csproj --configuration Release --no-restore 
     - name: Test
-      run: dotnet test --no-restore --verbosity normal
+      run: dotnet test ./src/azmi-commandline/azmi-commandline.csproj --no-restore --verbosity normal
+      
