--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         dotnet-version: 3.1.101
     - name: Install dependencies
-      run: dotnet restore
+      run: dotnet restore ./src/azmi-commandline/azmi-commandline.csproj
     - name: Build
       run: dotnet build ./src/azmi-commandline/azmi-commandline.csproj --configuration Release --no-restore 
     - name: Test
