--- a/src/azmi-main/azmi-main.csproj
+++ b/src/azmi-main/azmi-main.csproj
@@ -5,6 +5,7 @@
     <RootNamespace>azmi_main</RootNamespace>
     <OutputType>Library</OutputType>
     <Version>0.5.0</Version>
+  </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <PlatformTarget>x64</PlatformTarget>
