--- a/src/azmi-main/azmi-main.csproj
+++ b/src/azmi-main/azmi-main.csproj
@@ -16,7 +16,7 @@
     <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.1.0" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.6.0" />
     <PackageReference Include="Azure.Identity" Version="1.2.3" />
-    <PackageReference Include="NLog.Config" Version="4.7.5" />
+    <PackageReference Include="NLog" Version="4.7.5" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.7.1" />
   </ItemGroup>
 
