--- a/src/azmi-main/azmi-main.csproj
+++ b/src/azmi-main/azmi-main.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Azure.Identity" Version="1.2.3" />
     <PackageReference Include="NLog" Version="4.7.5" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
+    <PackageReference Include="System.IO.Abstractions" Version="12.2.7" />
   </ItemGroup>
 
 </Project>
