--- a/azmi-gui/azmi-gui.csproj
+++ b/azmi-gui/azmi-gui.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>azmi_gui</RootNamespace>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
